# ft-lockup-contract

./: .gitignore  Cargo.toml  Makefile
obsolete_tests/: claim.rs
res/: ft_lockup.wasm
src/: callbacks.rs  draft.rs  event.rs  ft_token_receiver.rs  internal.rs  lib.rs  lockup.rs  termination.rs  view.rs
tests/: deposit_whitelist.rs  draft.rs  setup.rs  terminate.rs  terminate_in_future.rs  test_base.rs  view.rs
tests/common/: contract_ft.rs  contract_lockup.rs  mod.rs  setup.rs  utils.rs
