[package]
name = "ft-lockup"
version = "1.0.0"
authors = ["Eugene The Dream <ek@proximity.dev>", "Marco <marco@ref.finance"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.1.1"
near-contract-standards = "=4.1.1"
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
workspaces = "0.7.0"
tokio = { version = "1.33.0", features = ["full"] }
near-units = "0.2.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
